# Epilyzer

./: .gitignore  Cargo.toml  README.md  debug_circadian.rs  install.sh  test_output.txt
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: config.rs  context.rs  debug_test.rs  epilepsy.rs  epilepsy_tests.rs  hardware.rs  ipc.rs  lib.rs
daemon/: Cargo.toml
daemon/src/: content.rs  logging.rs  main.rs  state.rs
debian/: postinst  postrm  prerm
gui/: Cargo.toml  auto-brightness.desktop
gui/src/: main.rs
scripts/: setup_permissions.sh
systemd/: auto-brightness.service  fix-brightness-permissions.service
udev/: 99-backlight.rules
