[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
zbus = { version = "4", features = ["blocking"] }
