[package]
name = "daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
notify-rust = "4"
csv = "1.3"
dirs = "5.0"
sysinfo = "0.29"

[package.metadata.deb]
name = "epilyzer"
maintainer = "wuqqers"
copyright = "2024, wuqqers"
license-file = ["../README.md", "0"]
extended-description = """
Epilyzer is a suite of tools designed to provide epilepsy-safe auto-brightness 
control for Linux systems. It includes a background daemon, a CLI tool, 
and a GTK4-based GUI.
"""
depends = "gammastep, libgtk-4-1, libadwaita-1-0"
section = "utils"
priority = "optional"
assets = [
    ["target/release/daemon", "/usr/bin/auto-brightness-daemon", "755"],
    ["target/release/cli", "/usr/bin/auto-brightness", "755"],
    ["target/release/gui", "/usr/bin/auto-brightness-gui", "755"],
    ["../gui/icon.svg", "/usr/share/icons/hicolor/scalable/apps/auto-brightness.svg", "644"],
    ["../gui/auto-brightness.desktop", "/usr/share/applications/auto-brightness.desktop", "644"],
    ["../udev/99-backlight.rules", "/lib/udev/rules.d/99-backlight.rules", "644"],
    ["../systemd/auto-brightness.service", "/usr/lib/systemd/user/auto-brightness.service", "644"],
    ["../systemd/fix-brightness-permissions.service", "/lib/systemd/system/fix-brightness-permissions.service", "644"]
]

maintainer-scripts = "../debian"
