[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk = { package = "gtk4", version = "0.7", features = ["v4_10"] }
adw = { package = "libadwaita", version = "0.5", features = ["v1_3"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
core = { path = "../core" }
ksni = "0.2"
glib = "0.18"
